genericGKE/gds2-lb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-ssl-negotiation-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    #service.beta.kubernetes.io/aws-load-balancer-ssl-ports: 443, 7687
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-2:766746056086:certificate/d8abdaa0-f3f2-4e0f-806e-ce72fed79be3
    #service.beta.kubernetes.io/aws-load-balancer-target-group-attributes: stickiness.enabled=true,stickiness.type=source_ip

  labels:
    #app: hybridgds
    helm.neo4j.com/instance: playsmall-gds-2
  name: playsmall-gds-2-lb
  namespace: "efs"
spec:
  #loadBalancerIP: 10.151.8.87
  externalTrafficPolicy: Local
  ports:
  - name: bolt
    port: 7687
    protocol: TCP
    targetPort: 7687
  - name: http
    port: 443
    protocol: TCP
    targetPort: 7474
  selector:
    helm.neo4j.com/instance: playsmall-gds-2
    #app: hybridgds
  sessionAffinity: None
  type: LoadBalancer
