genericGKE/standalone-lb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    networking.gke.io/load-balancer-type: "External"
    #networking.gke.io/load-balancer-type: "Internal"
  labels:
    app: standalone
  name: standalone-lb

spec:
  #loadBalancerIP: 10.151.8.87
  externalTrafficPolicy: Local
  ports:
  - name: bolt
    port: 7687
    protocol: TCP
    targetPort: 7687
  - name: http
    port: 7474
    protocol: TCP
    targetPort: 7474
  selector:
    app: standalone
  sessionAffinity: None
  type: LoadBalancer
